# SemilleroC

./: CMakeLists.txt
src/: main.c
src/features/menu/: menu.c  menu.h
src/features/services/cancellation/: cancellation.c  cancellation.h
src/features/services/closing/: closing.c  closing.h
src/features/services/purchase/: purchase.c  purchase.h
src/features/services/report/: report.c  report.h
src/features/services/reprint/: reprint.c  reprint.h
